--- a/git/albumify-next/files.html
+++ b/git/albumify-next/files.html
@@ -19,8 +19,9 @@
 <tr><td>Mode</td><td>Name</td><td class="num">Size</td></tr>
 </thead><tbody>
 <tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">2L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/LICENSE.html">LICENSE</a></td><td class="num">30L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/LICENSE.html">LICENSE</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/README.md.html">README.md</a></td><td class="num">25L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/TODO.md.html">TODO.md</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/config.json.html">config.json</a></td><td class="num">8L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/controllers/albums.go.html">controllers/albums.go</a></td><td class="num">71L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/controllers/client.go.html">controllers/client.go</a></td><td class="num">52L</td></tr>
