--- a/git/dotfiles/file/.gitmodules.html
+++ b/git/dotfiles/file/.gitmodules.html
@@ -15,38 +15,20 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .gitmodules (508B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .gitmodules (159B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
 <a href="#l4" id="l4">4</a>
 <a href="#l5" id="l5">5</a>
 <a href="#l6" id="l6">6</a>
-<a href="#l7" id="l7">7</a>
-<a href="#l8" id="l8">8</a>
-<a href="#l9" id="l9">9</a>
-<a href="#l10" id="l10">10</a>
-<a href="#l11" id="l11">11</a>
-<a href="#l12" id="l12">12</a>
-<a href="#l13" id="l13">13</a>
-<a href="#l14" id="l14">14</a>
-<a href="#l15" id="l15">15</a>
 </pre></td><td><pre>
-[submodule &quot;home/startpage&quot;]
-	path = home/startpage
-	url = https://github.com/tudurom/startpage.git
-[submodule &quot;scripts/.scripts/clint&quot;]
-	path = scripts/.scripts/clint
-	url = https://github.com/tudurom/clint.git
-[submodule &quot;startpage/startpage&quot;]
-	path = startpage/startpage
-	url = https://github.com/tudurom/startpage.git
 [submodule &quot;st&quot;]
 	path = st
 	url = https://github.com/tudurom/st.git
-[submodule &quot;gtk/.themes/oomox-cloudy&quot;]
-	path = gtk/.themes/oomox-cloudy
-	url = https://github.com/tudurom/cloudy-gtk
+[submodule &quot;startpage&quot;]
+	path = startpage
+	url = https://github.com/tudurom/startpage.git
 </pre></td></tr></table>
 </div>
 </body>
