--- a/git/dotfiles/file/cwm/.cwmrc.html
+++ b/git/dotfiles/file/cwm/.cwmrc.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .cwmrc (2020B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .cwmrc (2041B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -120,6 +120,7 @@
 <a href="#l102" id="l102">102</a>
 <a href="#l103" id="l103">103</a>
 <a href="#l104" id="l104">104</a>
+<a href="#l105" id="l105">105</a>
 </pre></td><td><pre>
 #
 # ~/.cwmrc
@@ -146,6 +147,7 @@ color urgencyborder  &apos;#ef9a89&apos;
 
 # autogroups
 autogroup 2 Firefox
+autogroup 2 chromium
 autogroup 3 mpv
 autogroup 6 Mumble
 
