--- a/git/dotfiles/file/gtk/.config/gtk-3.0/settings.ini.html
+++ b/git/dotfiles/file/gtk/.config/gtk-3.0/settings.ini.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> settings.ini (412B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> settings.ini (407B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -34,9 +34,9 @@
 <a href="#l16" id="l16">16</a>
 </pre></td><td><pre>
 [Settings]
-gtk-theme-name=oomox-cloudy
-gtk-icon-theme-name=Adwaita
-gtk-font-name=Share 13
+gtk-theme-name=cloudy-gtk
+gtk-icon-theme-name=Paper
+gtk-font-name=Sans 10
 gtk-cursor-theme-name=HumanAzul
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
