--- a/git/dotfiles/file/nvim/.config/nvim/colors/shblah.vim.html
+++ b/git/dotfiles/file/nvim/.config/nvim/colors/shblah.vim.html
@@ -15,7 +15,7 @@
 <a href="../../../../../log.html">Log</a> | <a href="../../../../../files.html">Files</a> | <a href="../../../../../refs.html">Refs</a> | <a href="../../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> shblah.vim (3530B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> shblah.vim (3541B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -104,7 +104,7 @@ let g:colors_name=&quot;shblah_orig&quot;
 
 &quot; Actual colours and styles.
 highlight ColorColumn  term=NONE cterm=NONE ctermfg=NONE ctermbg=0
-highlight Comment      term=NONE cterm=NONE ctermfg=8    ctermbg=NONE
+highlight Comment      term=NONE cterm=bold ctermfg=0    ctermbg=NONE
 highlight Constant     term=NONE cterm=NONE ctermfg=6    ctermbg=NONE
 highlight Cursor       term=NONE cterm=bold ctermfg=3    ctermbg=NONE
 highlight CursorLine   term=NONE cterm=NONE ctermfg=NONE ctermbg=0
@@ -137,7 +137,7 @@ highlight Todo         term=NONE cterm=bold ctermfg=7    ctermbg=1
 highlight Type         term=NONE cterm=bold ctermfg=4    ctermbg=NONE
 highlight Underlined   term=underline cterm=underline ctermfg=NONE   ctermbg=NONE
 highlight VertSplit    term=NONE cterm=bold ctermfg=0    ctermbg=NONE
-highlight Visual       term=NONE cterm=NONE ctermfg=0    ctermbg=8
+highlight Visual       term=NONE cterm=reverse,bold ctermfg=0    ctermbg=NONE
 highlight WarningMsg   term=NONE cterm=bold ctermfg=3    ctermbg=NONE
 
 &quot; General highlighting group links.
