--- a/git/dotfiles/file/scripts/.scripts/todo.html
+++ b/git/dotfiles/file/scripts/.scripts/todo.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> todo (1937B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> todo (1938B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -88,7 +88,7 @@ file=&quot;$HOME/.todo&quot;
 if [ -z $1 ] ; then
   echo &quot;┌──────[ todo ]──[ version 0.0.2 ]─────── ─ ─&quot;
   echo &quot;│ usage: todo &lt;options&gt;&quot;
-  echo &quot;│ author: xero, arc and tudurom&quot;
+  echo &quot;│ authors: xero, arc and tudurom&quot;
   echo &quot;├────────────────[ options ]&quot;───────────── ─ ─
   echo &quot;│ -s          display the todo list&quot;
   echo &quot;│ -a &lt;string&gt; add a todo item&quot;
