--- a/git/dotfiles/file/wmrc/.scripts/groupbar.html
+++ b/git/dotfiles/file/wmrc/.scripts/groupbar.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> groupbar (2346B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> groupbar (2349B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -127,7 +127,7 @@ BAR_FG=&quot;$(xrq &apos;*.foreground&apos;)&quot;
 BAR_UN=&quot;$(xrq &apos;*.color9&apos;)&quot;
 BAR_FONT=&quot;$PANEL_FONT&quot;
 BAR_ICON_FONT=&quot;-*-siji-*-*-*-*-10-*-*-*-*-*-*-*&quot;
-BAR_OPT=&quot;-d -f $BAR_FONT -f $BAR_ICON_FONT -g ${BAR_W}x${BAR_H}+${BAR_X}+${BAR_Y} -B $BAR_BG -F $BAR_FG -u 2 -a 30 -r $BW -R `xrq *.color8`&quot;
+BAR_OPT=&quot;-d -b -f $BAR_FONT -f $BAR_ICON_FONT -g ${BAR_W}x${BAR_H}+${BAR_X}+${BAR_Y} -B $BAR_BG -F $BAR_FG -u 2 -a 30 -r $BW -R `xrq *.color8`&quot;
 
 FIFO_PATH=&quot;/tmp/groups.fifo&quot;
 test -e &quot;$FIFO_PATH&quot; &amp;&amp; rm &quot;$FIFO_PATH&quot;
