--- a/git/dotfiles/files.html
+++ b/git/dotfiles/files.html
@@ -19,7 +19,7 @@
 <tr><td>Mode</td><td>Name</td><td class="num">Size</td></tr>
 </thead><tbody>
 <tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">18L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/.gitmodules.html">.gitmodules</a></td><td class="num">15L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/.gitmodules.html">.gitmodules</a></td><td class="num">6L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/README.md.html">README.md</a></td><td class="num">58L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/alsa/.asoundrc.html">alsa/.asoundrc</a></td><td class="num">4L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/asciiart/asciiart/cheatsheet.txt.html">asciiart/asciiart/cheatsheet.txt</a></td><td class="num">26L</td></tr>
@@ -41,14 +41,14 @@
 <tr><td>-rw-r--r--</td><td><a href="file/bspwm/.scripts/panel_icons.html">bspwm/.scripts/panel_icons</a></td><td class="num">29L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/compton/.compton.conf.html">compton/.compton.conf</a></td><td class="num">89L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/cwm/.config/sxhkd/sxhkdrc_cwm.html">cwm/.config/sxhkd/sxhkdrc_cwm</a></td><td class="num">6L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/cwm/.cwmrc.html">cwm/.cwmrc</a></td><td class="num">104L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/cwm/.cwmrc.html">cwm/.cwmrc</a></td><td class="num">105L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/firefox/README.md.html">firefox/README.md</a></td><td class="num">24L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/firefox/userChrome.css.html">firefox/userChrome.css</a></td><td class="num">329L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/git/.gitconfig.html">git/.gitconfig</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/bookmarks.html">gtk/.config/gtk-3.0/bookmarks</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/gtk.css.html">gtk/.config/gtk-3.0/gtk.css</a></td><td class="num">6L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/gtk/.config/gtk-3.0/settings.ini.html">gtk/.config/gtk-3.0/settings.ini</a></td><td class="num">16L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/mpd/.mpd/mpd.conf.html">mpd/.mpd/mpd.conf</a></td><td class="num">17L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/mpd/.mpd/mpd.conf.html">mpd/.mpd/mpd.conf</a></td><td class="num">20L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ncmpcpp/.ncmpcpp/bindings.html">ncmpcpp/.ncmpcpp/bindings</a></td><td class="num">539L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ncmpcpp/.ncmpcpp/config.html">ncmpcpp/.ncmpcpp/config</a></td><td class="num">64L</td></tr>
 <tr><td>l---------</td><td><a href="file/ncmpcpp/.ncmpcpp/error.log.html">ncmpcpp/.ncmpcpp/error.log</a></td><td class="num">1L</td></tr>
@@ -57,7 +57,7 @@
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/miromiro.vim.html">nvim/.config/nvim/colors/miromiro.vim</a></td><td class="num">113L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/shblah.vim.html">nvim/.config/nvim/colors/shblah.vim</a></td><td class="num">68L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/colors/shblah_light.vim.html">nvim/.config/nvim/colors/shblah_light.vim</a></td><td class="num">125L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/init.vim.html">nvim/.config/nvim/init.vim</a></td><td class="num">232L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/nvim/.config/nvim/init.vim.html">nvim/.config/nvim/init.vim</a></td><td class="num">206L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/6c37-git.git.html">ports/etc/ports/6c37-git.git</a></td><td class="num">5L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/6c37.git.html">ports/etc/ports/6c37.git</a></td><td class="num">5L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/ports/etc/ports/compat-32.rsync.inactive.html">ports/etc/ports/compat-32.rsync.inactive</a></td><td class="num">3L</td></tr>
@@ -89,15 +89,18 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/todo.html">scripts/.scripts/todo</a></td><td class="num">60L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/ufetch.html">scripts/.scripts/ufetch</a></td><td class="num">51L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/url-open.html">scripts/.scripts/url-open</a></td><td class="num">13L</td></tr>
-<tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/wall-e.html">scripts/.scripts/wall-e</a></td><td class="num">19L</td></tr>
+<tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/wall-e.html">scripts/.scripts/wall-e</a></td><td class="num">18L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/wm.html">scripts/.scripts/wm</a></td><td class="num">5L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/woodo.html">scripts/.scripts/woodo</a></td><td class="num">61L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/zalgo.html">scripts/.scripts/zalgo</a></td><td class="num">132L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.bashrc.html">shell/.bashrc</a></td><td class="num">1L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.crosssh.sh.html">shell/.crosssh.sh</a></td><td class="num">75L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.mkshrc.html">shell/.mkshrc</a></td><td class="num">43L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.bashrc.html">shell/.bashrc</a></td><td class="num">3L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.mkshrc.html">shell/.mkshrc</a></td><td class="num">49L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.profile.html">shell/.profile</a></td><td class="num">11L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/alias.sh.html">shell/.shell.d/alias.sh</a></td><td class="num">44L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/export.sh.html">shell/.shell.d/export.sh</a></td><td class="num">31L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/tty.sh.html">shell/.shell.d/tty.sh</a></td><td class="num">21L</td></tr>
 <tr><td>m---------</td><td><a href="file/.gitmodules.html">st</a></td><td class="num"></td></tr>
+<tr><td>m---------</td><td><a href="file/.gitmodules.html">startpage</a></td><td class="num"></td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/tmux/.tmux.conf.html">tmux/.tmux.conf</a></td><td class="num">95L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/tmux/.tmux/bin/statusline.html">tmux/.tmux/bin/statusline</a></td><td class="num">10L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/vimperator/.vimperator/colors/cloudy.vimp.html">vimperator/.vimperator/colors/cloudy.vimp</a></td><td class="num">69L</td></tr>
@@ -117,6 +120,7 @@
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/nomanssky.png.html">wallpapers/wallpapers/nomanssky.png</a></td><td class="num">7814986B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel.jpg.html">wallpapers/wallpapers/pixel.jpg</a></td><td class="num">222502B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/pixel2.png.html">wallpapers/wallpapers/pixel2.png</a></td><td class="num">220467B</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/rad.png.html">wallpapers/wallpapers/rad.png</a></td><td class="num">3572087B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/restaurant.png.html">wallpapers/wallpapers/restaurant.png</a></td><td class="num">13985B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/sativa.png.html">wallpapers/wallpapers/sativa.png</a></td><td class="num">4929B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/sea.jpg.html">wallpapers/wallpapers/sea.jpg</a></td><td class="num">2223383B</td></tr>
@@ -129,7 +133,6 @@
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/trees.jpg.html">wallpapers/wallpapers/trees.jpg</a></td><td class="num">780313B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/venice.jpg.html">wallpapers/wallpapers/venice.jpg</a></td><td class="num">5157280B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/wov.png.html">wallpapers/wallpapers/wov.png</a></td><td class="num">707B</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/wallpapers/wallpapers/xero_said_this_one_is_rad.png.html">wallpapers/wallpapers/xero_said_this_one_is_rad.png</a></td><td class="num">3572087B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wmrc/.config/sxhkd/commons.html">wmrc/.config/sxhkd/commons</a></td><td class="num">48L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wmrc/.config/sxhkd/sxhkdrc_wmutils.html">wmrc/.config/sxhkd/sxhkdrc_wmutils</a></td><td class="num">88L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/closestw.html">wmrc/.scripts/closestw</a></td><td class="num">47L</td></tr>
@@ -145,26 +148,27 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/panelsrc.html">wmrc/.scripts/panelsrc</a></td><td class="num">10L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/popup.html">wmrc/.scripts/popup</a></td><td class="num">26L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/secpanel.html">wmrc/.scripts/secpanel</a></td><td class="num">13L</td></tr>
-<tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/startwmutils.html">wmrc/.scripts/startwmutils</a></td><td class="num">10L</td></tr>
+<tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/startwm.html">wmrc/.scripts/startwm</a></td><td class="num">17L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/statusbar.html">wmrc/.scripts/statusbar</a></td><td class="num">171L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/tilew.html">wmrc/.scripts/tilew</a></td><td class="num">65L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/wewhandle.html">wmrc/.scripts/wewhandle</a></td><td class="num">33L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/windowat.html">wmrc/.scripts/windowat</a></td><td class="num">26L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/wmrc.html">wmrc/.scripts/wmrc</a></td><td class="num">16L</td></tr>
-<tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/xwait.html">wmrc/.scripts/xwait</a></td><td class="num">7347B</td></tr>
+<tr><td>-rwxr-xr-x</td><td><a href="file/wmrc/.scripts/xwait.html">wmrc/.scripts/xwait</a></td><td class="num">8680B</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/wmrc/.scripts/xwait.c.html">wmrc/.scripts/xwait.c</a></td><td class="num">10L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/x/.Xresources.html">x/.Xresources</a></td><td class="num">11L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/x/.xinitrc.html">x/.xinitrc</a></td><td class="num">76L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/x/.Xresources.html">x/.Xresources</a></td><td class="num">10L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/x/.xinitrc.html">x/.xinitrc</a></td><td class="num">74L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/README.md.html">x/.xres/README.md</a></td><td class="num">10L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/cloudy.html">x/.xres/colors/cloudy</a></td><td class="num">43L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/designr.html">x/.xres/colors/designr</a></td><td class="num">38L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/moonbow.html">x/.xres/colors/moonbow</a></td><td class="num">38L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/thunder.html">x/.xres/colors/thunder</a></td><td class="num">38L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/colors/woody.html">x/.xres/colors/woody</a></td><td class="num">43L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/x/.xres/misc.html">x/.xres/misc</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/urxvt.html">x/.xres/urxvt</a></td><td class="num">17L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/x/.xres/xft.html">x/.xres/xft</a></td><td class="num">9L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/xdg/.config/user-dirs.dirs.html">xdg/.config/user-dirs.dirs</a></td><td class="num">7L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/xmodmap/.xmodmaprc.html">xmodmap/.xmodmaprc</a></td><td class="num">14L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/xmodmap/.xmodmaprc.html">xmodmap/.xmodmaprc</a></td><td class="num">15L</td></tr>
 </tbody></table></div>
 </body>
 </html>
