--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,16 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-06-15 15:25</td><td><a href="commit/11ca0d6a23770b8629885763fbdaecd1def6de6d.html">added submodules</a></td><td>Tudor</td><td class="num">4</td><td class="num">+7</td><td class="num">-2</td></tr>
+<tr><td>2016-06-15 14:46</td><td><a href="commit/21dc3b8e0caab1a289b664f284b473289289e30d.html">sloop</a></td><td>Tudor</td><td class="num">12</td><td class="num">+46</td><td class="num">-36</td></tr>
+<tr><td>2016-06-11 21:28</td><td><a href="commit/d6e642f47044ade25054f1dd5f838b56d0ff7cd3.html">misc linux fixes</a></td><td>Tudor</td><td class="num">4</td><td class="num">+12</td><td class="num">-7</td></tr>
+<tr><td>2016-06-10 19:24</td><td><a href="commit/56a90546086201d5f9e77daf0beb7e1792716575.html">fixes part 2</a></td><td>Tudor</td><td class="num">2</td><td class="num">+9</td><td class="num">-9</td></tr>
+<tr><td>2016-06-10 19:00</td><td><a href="commit/bcae234e2b02758019c2f400a9191c58f18b9277.html">back on linux!</a></td><td>Tudor</td><td class="num">6</td><td class="num">+25</td><td class="num">-21</td></tr>
+<tr><td>2016-06-10 12:07</td><td><a href="commit/57f9014a8a050097605e0929614e9b36adc2c931.html">vim: cleanup</a></td><td>Tudor</td><td class="num">1</td><td class="num">+0</td><td class="num">-18</td></tr>
+<tr><td>2016-06-10 11:35</td><td><a href="commit/27b0aa9e63c540d5699d6050ae6072f4d3ee6d11.html">vim completion</a></td><td>Tudor</td><td class="num">5</td><td class="num">+12</td><td class="num">-15</td></tr>
+<tr><td>2016-06-09 18:49</td><td><a href="commit/59c1fd1f3c30981063bc79cd402bb158a88d513b.html">clean shell dir</a></td><td>Tudor</td><td class="num">5</td><td class="num">+76</td><td class="num">-81</td></tr>
+<tr><td>2016-06-08 11:48</td><td><a href="commit/2b794832e6e750e12b2c9bec143883a4958410a1.html">misc</a></td><td>Tudor</td><td class="num">6</td><td class="num">+23</td><td class="num">-16</td></tr>
+<tr><td>2016-06-05 19:01</td><td><a href="commit/c48f4968f0a0cb10952ed770e7b9ef707fe9cf58.html">now using urxvt</a></td><td>Tudor</td><td class="num">7</td><td class="num">+17</td><td class="num">-18</td></tr>
 <tr><td>2016-06-04 10:31</td><td><a href="commit/49a2e4ef589b5acc4ad92e207da384dd094ad11e.html">fixes</a></td><td>Tudor</td><td class="num">4</td><td class="num">+8</td><td class="num">-5</td></tr>
 <tr><td>2016-06-04 10:13</td><td><a href="commit/5d1b6acffdf72a2987c91fb2915f8d4f558ae98a.html">misc</a></td><td>Tudor</td><td class="num">9</td><td class="num">+79</td><td class="num">-21</td></tr>
 <tr><td>2016-06-03 10:05</td><td><a href="commit/ce73418c259e17b539c1f50db53a751ce3ffe2fa.html">golang magic</a></td><td>Tudor</td><td class="num">2</td><td class="num">+19</td><td class="num">-2</td></tr>
