--- a/git/nexus/file/.gitignore.html
+++ b/git/nexus/file/.gitignore.html
@@ -3,15 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Content-Language" content="en" />
-<title>.gitignore - nexus - Bot that plays the Pah-Tum game. Available here for historical purposes. Warning: comments are in Romanian.
+<title>.gitignore - nexus - Bot that plays the Pah-Tum game. Available here for historical purposes.
 </title>
 <link rel="icon" type="image/png" href="../favicon.png" />
 <link rel="alternate" type="application/atom+xml" title="nexus.git Atom Feed" href="../atom.xml" />
 <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
 <body>
-<table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>nexus</h1><span class="desc">Bot that plays the Pah-Tum game. Available here for historical purposes. Warning: comments are in Romanian.
-</span></td></tr><tr><td></td><td>
+<table><tr><td><a href="../../"><img src="../logo.png" alt="" width="32" height="32" /></a></td><td><h1>nexus</h1><span class="desc">Bot that plays the Pah-Tum game. Available here for historical purposes.
+</span></td></tr><tr class="url"><td></td><td>git clone <a href="git://thetudor.ddns.net/nexus.git">git://thetudor.ddns.net/nexus.git</a></td></tr><tr><td></td><td>
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
