--- a/git/rainbou/log.html
+++ b/git/rainbou/log.html
@@ -18,6 +18,11 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-06-06 12:18</td><td><a href="commit/067ccb45f5ba6b2c4ee2dd6301ab894f0a061e77.html">added custom styles dir</a></td><td>Tudor</td><td class="num">3</td><td class="num">+5</td><td class="num">-0</td></tr>
+<tr><td>2016-06-06 12:12</td><td><a href="commit/04b9b65175d72798708f81c543220873aa04564b.html">update firefox template</a></td><td>Tudor</td><td class="num">1</td><td class="num">+94</td><td class="num">-81</td></tr>
+<tr><td>2016-06-03 07:07</td><td><a href="commit/fe5c900e34fa5183df6c85afd222e63f1ff6e01f.html">no magenta for thunderstorm</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-2</td></tr>
+<tr><td>2016-06-03 06:55</td><td><a href="commit/216820fbc47251f84b1da12acb2d834ed6deee65.html">ignore generated files</a></td><td>Tudor</td><td class="num">2</td><td class="num">+1</td><td class="num">-38</td></tr>
+<tr><td>2016-06-03 06:54</td><td><a href="commit/4786163b15057a848f052ebfc1fda4332acab8cc.html">magenta for thunderstorm</a></td><td>Tudor</td><td class="num">3</td><td class="num">+41</td><td class="num">-3</td></tr>
 <tr><td>2016-06-03 06:45</td><td><a href="commit/008390fd44d6f02b3f7cd595285ab5370b3e7fcf.html">fix thunderstorm</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-2</td></tr>
 <tr><td>2016-05-29 17:20</td><td><a href="commit/dd1d30ee6851e41aba0537b68704773a99185e06.html">Merge pull request #1 from justinbloomfield/master</a></td><td>Tudor Roman</td><td class="num">5</td><td class="num">+108</td><td class="num">-1</td></tr>
 <tr><td>2016-05-21 19:49</td><td><a href="commit/81f3baf68ff903c142df4df4618a0b118c7270cf.html">firefox: default to monospace</a></td><td>Tudor</td><td class="num">2</td><td class="num">+15</td><td class="num">-15</td></tr>
