--- a/git/albumify-next/file/LICENSE.html
+++ b/git/albumify-next/file/LICENSE.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> LICENSE (1478B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> LICENSE (732B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -25,58 +25,16 @@
 <a href="#l7" id="l7">7</a>
 <a href="#l8" id="l8">8</a>
 <a href="#l9" id="l9">9</a>
-<a href="#l10" id="l10">10</a>
-<a href="#l11" id="l11">11</a>
-<a href="#l12" id="l12">12</a>
-<a href="#l13" id="l13">13</a>
-<a href="#l14" id="l14">14</a>
-<a href="#l15" id="l15">15</a>
-<a href="#l16" id="l16">16</a>
-<a href="#l17" id="l17">17</a>
-<a href="#l18" id="l18">18</a>
-<a href="#l19" id="l19">19</a>
-<a href="#l20" id="l20">20</a>
-<a href="#l21" id="l21">21</a>
-<a href="#l22" id="l22">22</a>
-<a href="#l23" id="l23">23</a>
-<a href="#l24" id="l24">24</a>
-<a href="#l25" id="l25">25</a>
-<a href="#l26" id="l26">26</a>
-<a href="#l27" id="l27">27</a>
-<a href="#l28" id="l28">28</a>
-<a href="#l29" id="l29">29</a>
-<a href="#l30" id="l30">30</a>
 </pre></td><td><pre>
-Copyright (c) 2016, tudurom
-All rights reserved.
+Copyright (c) 2016, The Gnot Club
 
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions
-are met:
+Permission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 
-1. Redistributions of source code must retain the above copyright
-notice, this list of conditions and the following disclaimer.
-
-2. Redistributions in binary form must reproduce the above copyright
-notice, this list of conditions and the following disclaimer in the
-documentation and/or other materials provided with the distribution.
-
-3. Neither the name of the copyright holder nor the names of its
-contributors may be used to endorse or promote products derived
-from this software without specific prior written permission.
-
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-&quot;AS IS&quot; AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
-FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
-BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
-CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
-LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
-ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-POSSIBILITY OF SUCH DAMAGE.
+THE SOFTWARE IS PROVIDED &quot;AS IS&quot; AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE
+INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE
+FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS
+OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING
+OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 </pre></td></tr></table>
 </div>
 </body>
