--- a/git/albumify-next/log.html
+++ b/git/albumify-next/log.html
@@ -18,6 +18,7 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-06-04 20:50</td><td><a href="commit/09ad7a20a3ef6d3907c8f22bb3a9eaf29b8a4661.html">changed license to ISC and added TODO</a></td><td>Tudor</td><td class="num">2</td><td class="num">+10</td><td class="num">-28</td></tr>
 <tr><td>2016-06-04 20:03</td><td><a href="commit/d013c837065ebf39fdb5a35c30b639d868f0a6e5.html">fix usage in readme</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
 <tr><td>2016-06-04 20:00</td><td><a href="commit/9d207ca0e38b73e731d7bcebf098e1bcee4a5484.html">client part draft</a></td><td>Tudor</td><td class="num">13</td><td class="num">+174</td><td class="num">-15</td></tr>
 <tr><td>2016-06-03 20:20</td><td><a href="commit/4e4255dd9785a0e39180bffe2f76e0f03d39c08b.html">enable CORS</a></td><td>Tudor</td><td class="num">5</td><td class="num">+38</td><td class="num">-5</td></tr>
