--- a/git/dotfiles/file/nvim/.config/nvim/init.vim.html
+++ b/git/dotfiles/file/nvim/.config/nvim/init.vim.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> init.vim (4555B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> init.vim (3740B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -222,32 +222,6 @@
 <a href="#l204" id="l204">204</a>
 <a href="#l205" id="l205">205</a>
 <a href="#l206" id="l206">206</a>
-<a href="#l207" id="l207">207</a>
-<a href="#l208" id="l208">208</a>
-<a href="#l209" id="l209">209</a>
-<a href="#l210" id="l210">210</a>
-<a href="#l211" id="l211">211</a>
-<a href="#l212" id="l212">212</a>
-<a href="#l213" id="l213">213</a>
-<a href="#l214" id="l214">214</a>
-<a href="#l215" id="l215">215</a>
-<a href="#l216" id="l216">216</a>
-<a href="#l217" id="l217">217</a>
-<a href="#l218" id="l218">218</a>
-<a href="#l219" id="l219">219</a>
-<a href="#l220" id="l220">220</a>
-<a href="#l221" id="l221">221</a>
-<a href="#l222" id="l222">222</a>
-<a href="#l223" id="l223">223</a>
-<a href="#l224" id="l224">224</a>
-<a href="#l225" id="l225">225</a>
-<a href="#l226" id="l226">226</a>
-<a href="#l227" id="l227">227</a>
-<a href="#l228" id="l228">228</a>
-<a href="#l229" id="l229">229</a>
-<a href="#l230" id="l230">230</a>
-<a href="#l231" id="l231">231</a>
-<a href="#l232" id="l232">232</a>
 </pre></td><td><pre>
 &quot; ╻┏┓╻╻╺┳╸ ╻ ╻╻┏┳┓
 &quot; ┃┃┗┫┃ ┃  ┃┏┛┃┃┃┃
@@ -266,16 +240,12 @@ call plug#begin(&apos;~/.config/nvim/bundle&apos;)
 Plug &apos;ntpeters/vim-better-whitespace&apos;
 
 &quot; Simple tab completion
-&quot; neovim-python is required
-if has(&quot;python3&quot;)
-    Plug &apos;Shougo/deoplete.nvim&apos;
-    if executable(&apos;clang&apos;)
-        Plug &apos;zchee/deoplete-clang&apos;
-    endif
-    if executable(&apos;go&apos;)
-        Plug &apos;zchee/deoplete-go&apos;, { &apos;do&apos;: &apos;make&apos;}
-        Plug &apos;fatih/vim-go&apos;
-    endif
+Plug &apos;ajh17/vimcompletesme&apos;
+if executable(&apos;clang&apos;)
+    Plug &apos;Rip-Rip/clang_complete&apos;
+endif
+if executable(&apos;go&apos;)
+    Plug &apos;fatih/vim-go&apos;
 endif
 
 &quot; Syntax checking
@@ -339,7 +309,7 @@ set undoreload=500
 &quot; Keybindings {{{
 
 &quot; C-d to hide find results
-nnoremap &lt;silent&gt; &lt;C-d&gt; :noh&lt;CR&gt;
+nnoremap &lt;silent&gt; &lt;Leader&gt;d :noh&lt;CR&gt;
 &quot; Esc in terminal
 tnoremap &lt;Esc&gt; &lt;C-\&gt;&lt;C-n&gt;
 &quot; jk to exit insert mode
@@ -417,32 +387,10 @@ map &lt;Leader&gt;l &lt;C-w&gt;l
 
 &quot; Completion {{{
 
-let g:deoplete#enable_at_startup = 1
-&quot; C/C++ things
-let g:deoplete#sources#clang#libclang_path = &apos;/usr/local/llvm37/lib/libclang.so&apos;
-let g:deoplete#sources#clang#clang_header = &apos;/usr/local/llvm37/include/clang/&apos;
-&quot; C or C++ standard version
-let g:deoplete#sources#clang#std#c = &apos;c11&apos;
-&quot; or c++
-let g:deoplete#sources#clang#std#cpp = &apos;c++11&apos;
-
-&quot; Stolen from shougo {{{
-imap &lt;silent&gt;&lt;expr&gt; &lt;TAB&gt;
-      \ pumvisible() ? &quot;\&lt;C-n&gt;&quot; :
-      \ &lt;SID&gt;check_back_space() ? &quot;\&lt;TAB&gt;&quot; :
-      \ deoplete#mappings#manual_complete()
-function! s:check_back_space() abort &quot;{{{
-  let col = col(&apos;.&apos;) - 1
-  return !col || getline(&apos;.&apos;)[col - 1]  =~ &apos;\s&apos;
-endfunction&quot;}}}
-
-function! s:check_back_space() abort &quot;{{{
-    let col = col(&apos;.&apos;) - 1
-    return !col || getline(&apos;.&apos;)[col - 1]  =~ &apos;\s&apos;
-endfunction&quot;}}}
+filetype plugin on
+set omnifunc=syntaxcomplete#Complete
+let b:vcm_tab_complete = &apos;omni&apos;
 &quot;}}}
-
-&quot; }}}
 
 &quot; Golang {{{
 let g:go_fmt_command = &quot;goimports&quot;
@@ -471,15 +419,15 @@ let g:syntastic_check_on_wq = 0
 &quot; }}}
 
 &quot; Hard mode {{{
-noremap &lt;Up&gt; &lt;NOP&gt;
-noremap &lt;Down&gt; &lt;NOP&gt;
-noremap &lt;Left&gt; &lt;NOP&gt;
-noremap &lt;Right&gt; &lt;NOP&gt;
-
-inoremap &lt;Up&gt; &lt;NOP&gt;
-inoremap &lt;Down&gt; &lt;NOP&gt;
-inoremap &lt;Left&gt; &lt;NOP&gt;
-inoremap &lt;Right&gt; &lt;NOP&gt;
+&quot;noremap &lt;Up&gt; &lt;NOP&gt;
+&quot;noremap &lt;Down&gt; &lt;NOP&gt;
+&quot;noremap &lt;Left&gt; &lt;NOP&gt;
+&quot;noremap &lt;Right&gt; &lt;NOP&gt;
+&quot;
+&quot;inoremap &lt;Up&gt; &lt;NOP&gt;
+&quot;inoremap &lt;Down&gt; &lt;NOP&gt;
+&quot;inoremap &lt;Left&gt; &lt;NOP&gt;
+&quot;inoremap &lt;Right&gt; &lt;NOP&gt;
 &quot; }}}
 </pre></td></tr></table>
 </div>
