--- a/git/dotfiles/file/scripts/.scripts/wall-e.html
+++ b/git/dotfiles/file/scripts/.scripts/wall-e.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> wall-e (358B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> wall-e (334B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -34,7 +34,6 @@
 <a href="#l16" id="l16">16</a>
 <a href="#l17" id="l17">17</a>
 <a href="#l18" id="l18">18</a>
-<a href="#l19" id="l19">19</a>
 </pre></td><td><pre>
 #! /bin/sh -x
 #
@@ -48,8 +47,7 @@ APRIL_WALL=&quot;$HOME/wallpapers/april_wall.png&quot;
 if [ &quot;$(date +&quot;%d/%m&quot;)&quot; = &quot;01/04&quot; ]; then
   feh -fill &quot;$APRIL_WALL&quot;
 elif [ $# -ge 1 ]; then
-  option=&quot;fill&quot;
-  test -n &quot;$2&quot; &amp;&amp; option=&quot;$2&quot;
+  option=&quot;${2:-fill}&quot;
   feh --bg-${option} $1
 else
   feh --bg-tile $DEFAULT_WALL
