--- a/git/dotfiles/file/wmrc/.scripts/statusbar.html
+++ b/git/dotfiles/file/wmrc/.scripts/statusbar.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> statusbar (3772B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> statusbar (3896B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -297,14 +297,14 @@ is_int() {
 
   # Battery status
   while true; do
-    batt_status=&quot;$(apm -b)&quot;
-    batt_percentage=&quot;$(apm -l)&quot;
+    batt_status=&quot;$(cat /sys/class/power_supply/BAT0/status)&quot;
+    batt_percentage=&quot;$(cat /sys/class/power_supply/BAT0/capacity)&quot;
     # Icons
-    if [ &quot;$batt_status&quot; -eq 3 ]; then
+    if [ &quot;$batt_status&quot; = &quot;Charging&quot; ]; then
       BATT_ICON=&quot;&quot;
-    elif [ &quot;$batt_status&quot; -eq 0 ]; then
+    elif [ &quot;$batt_percentage&quot; -gt 50 ]; then
       BATT_ICON=&quot;&quot;
-    elif [ &quot;$batt_status&quot; -eq 1 ]; then
+    elif [ &quot;$batt_percentage&quot; -gt 30 ]; then
       BATT_ICON=&quot;&quot;
     else
       BATT_ICON=&quot;&quot;
@@ -315,9 +315,9 @@ is_int() {
 
   # Volume
   while true; do
-    pcm=$(mixer -S pcm | cut -d&apos;:&apos; -f2)
-    volume=$(mixer -S vol | cut -d&apos;:&apos; -f2)
-    if [ &quot;$pcm&quot; -gt 0 ]; then
+    mute=$(amixer get Master | sed -n 5p | cut -d&apos; &apos; -f8)
+    volume=$(amixer get Master | sed -n 5p | cut -d&apos; &apos; -f5)
+    if [ &quot;$mute&quot; = &quot;[on]&quot; ]; then
       if [ $volume -ge 50 ]; then
         vicon=
       else
