--- a/git/dotfiles/file/x/.Xresources.html
+++ b/git/dotfiles/file/x/.Xresources.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .Xresources (416B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .Xresources (412B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -26,7 +26,6 @@
 <a href="#l8" id="l8">8</a>
 <a href="#l9" id="l9">9</a>
 <a href="#l10" id="l10">10</a>
-<a href="#l11" id="l11">11</a>
 </pre></td><td><pre>
 ! ╻ ╻┏━┓┏━╸┏━┓┏━┓╻ ╻┏━┓┏━╸┏━╸┏━┓
 ! ┏╋┛┣┳┛┣╸ ┗━┓┃ ┃┃ ┃┣┳┛┃  ┣╸ ┗━┓
@@ -34,11 +33,10 @@
 ! by tudurom
 ! managed like they are supposed to be
 
-Xcursor.theme: HumanAzul
-
 #include &quot;.xres/xft&quot;
 #include &quot;.xres/colors/thunder&quot;
 #include &quot;.xres/urxvt&quot;
+#include &quot;.xres/misc&quot;
 </pre></td></tr></table>
 </div>
 </body>
