--- a/git/dotfiles/file/xmodmap/.xmodmaprc.html
+++ b/git/dotfiles/file/xmodmap/.xmodmaprc.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .xmodmaprc (299B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .xmodmaprc (329B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -30,6 +30,7 @@
 <a href="#l12" id="l12">12</a>
 <a href="#l13" id="l13">13</a>
 <a href="#l14" id="l14">14</a>
+<a href="#l15" id="l15">15</a>
 </pre></td><td><pre>
 ! remove caps
 clear lock
@@ -39,12 +40,13 @@ remove Shift = Caps_Lock
 ! make caps esc
 keysym Caps_Lock = Escape
 
-keycode 92 = XF86AudioPlay
-keycode 170 = XF86AudioStop
-keycode 184 = XF86AudioPrev
-keycode 189 = XF86AudioMute
-keycode 207 = XF86AudioRaiseVolume
-keycode 190 = XF86AudioLowerVolume
+! FreeBSD hackery
+! keycode 92 = XF86AudioPlay
+! keycode 170 = XF86AudioStop
+! keycode 184 = XF86AudioPrev
+! keycode 189 = XF86AudioMute
+! keycode 207 = XF86AudioRaiseVolume
+! keycode 190 = XF86AudioLowerVolume
 </pre></td></tr></table>
 </div>
 </body>
