--- a/git/rainbou/file/README.md.html
+++ b/git/rainbou/file/README.md.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> README.md (587B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> README.md (667B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -53,6 +53,8 @@
 <a href="#l35" id="l35">35</a>
 <a href="#l36" id="l36">36</a>
 <a href="#l37" id="l37">37</a>
+<a href="#l38" id="l38">38</a>
+<a href="#l39" id="l39">39</a>
 </pre></td><td><pre>
 Rainbou
 =======
@@ -61,6 +63,8 @@ Simple color scheme file generator
 ----------------------------------
 
 Rainbou takes two files: a color file and a template file. The color file contains color definitions, while the template file contains details about where to put the colors.
+
+Add your custom styles to `templates/custom`. The directory is ignored by git.
 
 ### Example:
 
