--- a/git/rainbou/files.html
+++ b/git/rainbou/files.html
@@ -18,8 +18,9 @@
 <table id="files"><thead>
 <tr><td>Mode</td><td>Name</td><td class="num">Size</td></tr>
 </thead><tbody>
+<tr><td>-rw-r--r--</td><td><a href="file/.gitignore.html">.gitignore</a></td><td class="num">3L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/LICENSE.html">LICENSE</a></td><td class="num">5L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/README.md.html">README.md</a></td><td class="num">37L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/README.md.html">README.md</a></td><td class="num">39L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/colors/dkeg/designr.html">colors/dkeg/designr</a></td><td class="num">27L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/colors/inami/moonbow.html">colors/inami/moonbow</a></td><td class="num">27L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/colors/piecesofquiet/bw.html">colors/piecesofquiet/bw</a></td><td class="num">27L</td></tr>
@@ -29,7 +30,8 @@
 <tr><td>-rw-r--r--</td><td><a href="file/colors/tudurom/thunderstorm.html">colors/tudurom/thunderstorm</a></td><td class="num">27L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/colors/tudurom/woody.html">colors/tudurom/woody</a></td><td class="num">27L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/rainbou.html">rainbou</a></td><td class="num">50L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/templates/firefox.html">templates/firefox</a></td><td class="num">329L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/templates/custom/README.md.html">templates/custom/README.md</a></td><td class="num">1L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/templates/firefox.html">templates/firefox</a></td><td class="num">342L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/templates/linux_tty.html">templates/linux_tty</a></td><td class="num">21L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/templates/st.html">templates/st</a></td><td class="num">42L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/templates/st_light.html">templates/st_light</a></td><td class="num">43L</td></tr>
