--- a/404.html
+++ b/404.html
@@ -6,7 +6,6 @@
   </head>
 
   <body>
-    <h1>404 - Lurk Moar</h1>
-    <p>mănâncă o <a href="/pub/mamaliga.ogg">mămăligă</a>, după mai încearcă</p>
+    <h1>404 - Drink some tea</h1>
   </body>
 </html>
