--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-06-20 19:33</td><td><a href="commit/787ae18febf79ee214fcea05a7a3911c5bcf2b09.html">hack</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
+<tr><td>2016-06-15 15:38</td><td><a href="commit/c9f9a7cb3e4560ab437991a7ce9dc81ed44cd200.html">add shell prompt to its own file</a></td><td>Tudor</td><td class="num">2</td><td class="num">+19</td><td class="num">-19</td></tr>
 <tr><td>2016-06-15 15:25</td><td><a href="commit/11ca0d6a23770b8629885763fbdaecd1def6de6d.html">added submodules</a></td><td>Tudor</td><td class="num">4</td><td class="num">+7</td><td class="num">-2</td></tr>
 <tr><td>2016-06-15 14:46</td><td><a href="commit/21dc3b8e0caab1a289b664f284b473289289e30d.html">sloop</a></td><td>Tudor</td><td class="num">12</td><td class="num">+46</td><td class="num">-36</td></tr>
 <tr><td>2016-06-11 21:28</td><td><a href="commit/d6e642f47044ade25054f1dd5f838b56d0ff7cd3.html">misc linux fixes</a></td><td>Tudor</td><td class="num">4</td><td class="num">+12</td><td class="num">-7</td></tr>
