--- a/git/index.html
+++ b/git/index.html
@@ -20,8 +20,9 @@
 <tr><td><a href="textual/log.html">textual</a></td><td>ASCII user interface in JS.
 </td><td>tudurom</td><td>2016-05-14 10:15</td></tr><tr><td><a href="rainbou/log.html">rainbou</a></td><td>Simple color scheme file generator written in sh.
 </td><td>tudurom</td><td>2016-06-06 12:18</td></tr><tr><td><a href="nexus/log.html">nexus</a></td><td>Bot that plays the Pah-Tum game. Available here for historical purposes.
-</td><td>tudurom</td><td>2015-06-15 18:27</td></tr><tr><td><a href="dotfiles/log.html">dotfiles</a></td><td>Small loan of configuration files.
-</td><td>tudurom</td><td>2016-06-15 15:25</td></tr><tr><td><a href="disputils/log.html">disputils</a></td><td>Utilities for getting information about connected displays.
+</td><td>tudurom</td><td>2015-06-15 18:27</td></tr><tr><td><a href="glenda/log.html">glenda</a></td><td>Program that plays the Flood Wars game for a contest.
+</td><td>tudurom</td><td>2016-06-15 17:49</td></tr><tr><td><a href="dotfiles/log.html">dotfiles</a></td><td>Small loan of configuration files.
+</td><td>tudurom</td><td>2016-06-20 19:33</td></tr><tr><td><a href="disputils/log.html">disputils</a></td><td>Utilities for getting information about connected displays.
 </td><td>tudurom/ix</td><td>2016-05-03 10:39</td></tr><tr><td><a href="crux-ports/log.html">crux-ports</a></td><td>Ports for the CRUX Linux distro.
 </td><td>tudurom</td><td>2016-05-14 20:57</td></tr><tr><td><a href="albumify/log.html">albumify</a></td><td>Web app for creating imgur-like image albums that gives you the freedom to use any image hoster you like.
 </td><td>tudurom</td><td>2016-04-18 16:50</td></tr><tr><td><a href="albumify-next/log.html">albumify-next</a></td><td>Next gen albumify, written in Go. Uses mongodb. WIP!
