--- a/git/dotfiles/file/shell/.shell.d/alias.sh.html
+++ b/git/dotfiles/file/shell/.shell.d/alias.sh.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> alias.sh (893B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> alias.sh (914B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -60,6 +60,7 @@
 <a href="#l42" id="l42">42</a>
 <a href="#l43" id="l43">43</a>
 <a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
 </pre></td><td><pre>
 alias :q=exit
 alias irb=pry
@@ -73,6 +74,7 @@ alias rm=&quot;rm -I&quot;
 alias clip=&quot;xclip -selection clipboard&quot;
 alias poweroff=&quot;sudo poweroff&quot;
 alias reboot=&quot;sudo reboot&quot;
+alias startx=&quot;xinit&quot;
 test &quot;$(uname)&quot; = &quot;FreeBSD&quot; &amp;&amp; alias tput=&quot;/usr/local/bin/tput&quot;
 
 testnet() {
