--- a/git/dotfiles/files.html
+++ b/git/dotfiles/files.html
@@ -94,10 +94,11 @@
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/woodo.html">scripts/.scripts/woodo</a></td><td class="num">61L</td></tr>
 <tr><td>-rwxr-xr-x</td><td><a href="file/scripts/.scripts/zalgo.html">scripts/.scripts/zalgo</a></td><td class="num">132L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.bashrc.html">shell/.bashrc</a></td><td class="num">3L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.mkshrc.html">shell/.mkshrc</a></td><td class="num">49L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.mkshrc.html">shell/.mkshrc</a></td><td class="num">30L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.profile.html">shell/.profile</a></td><td class="num">11L</td></tr>
-<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/alias.sh.html">shell/.shell.d/alias.sh</a></td><td class="num">44L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/alias.sh.html">shell/.shell.d/alias.sh</a></td><td class="num">45L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/export.sh.html">shell/.shell.d/export.sh</a></td><td class="num">31L</td></tr>
+<tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/prompt.sh.html">shell/.shell.d/prompt.sh</a></td><td class="num">19L</td></tr>
 <tr><td>-rw-r--r--</td><td><a href="file/shell/.shell.d/tty.sh.html">shell/.shell.d/tty.sh</a></td><td class="num">21L</td></tr>
 <tr><td>m---------</td><td><a href="file/.gitmodules.html">st</a></td><td class="num"></td></tr>
 <tr><td>m---------</td><td><a href="file/.gitmodules.html">startpage</a></td><td class="num"></td></tr>
